[project]
name = "PROJECT_NAME_PLACEHOLDER"
version = "0.1.0"
description = "TODO"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
